# CropGuardian

./: .gitignore  CMakeLists.txt  README.md
Assets/Fonts/: Old_School_Adventures.ttf.txt  gothic-pixel.ttf.txt
Assets/Levels/: .~lock.level1_scenary.csv#  TilesLevel1.tsx  level1.csv  level1.tmx  level1_path.csv  level1_scenary.csv  scenary_objects.tsx
Assets/Sounds/: AbelhaMorrendo.wav.txt  GameOverTheme.mp3.txt  MusicMain.mp3.txt  Victory.wav.txt  _SlimeMorrendo.wav.txt  menu_move.wav.txt  menu_selected.wav.txt  pause.mp3.txt
Assets/Sprites/Base/: Flag.json
Assets/Sprites/Bee/: Bee.json  bee.json
Assets/Sprites/EnemyPortal/: Portal.json
Assets/Sprites/IceTower/: ice_tower.json
Assets/Sprites/NormalTower/: normal_tower.json
Assets/Sprites/Ogre/: Ogre.json
Assets/Sprites/Slime/: slime.json
Assets/Sprites/Tower/: normal_tower.json
Docs/: README.md.OLD
Source/: AudioSystem.cpp  AudioSystem.h  BuildTowerHUD.cpp  BuildTowerHUD.h  Game.cpp  Game.h  Main.cpp  MainHUD.cpp  MainHUD.h  SpatialHashing.cpp  SpatialHashing.h  StartGameHUD.cpp  StartGameHUD.h
Source/Actors/: Actor.h  Base.cpp  Base.h  Bee.cpp  Bee.h  Block.cpp  Block.h  BuildSpot.cpp  BuildSpot.h  EnemyPortal.cpp  EnemyPortal.h  NormalArrow.cpp  NormalArrow.h  NormalTower.cpp  NormalTower.h  Slime.cpp  Slime.h
Source/Actors/Enemy/: Bee.cpp  Bee.h  Enemy.cpp  Enemy.h  Slime.cpp  Slime.h
Source/Actors/Tower/: IceTower.cpp  IceTower.h  NormalArrow.cpp  NormalArrow.h  NormalTower.cpp  NormalTower.h  Projectile.cpp  Projectile.h  Tower.cpp  Tower.h
Source/Components/: RigidBodyComponent.cpp
Source/Components/ColliderComponents/: AABBColliderComponent.h
Source/Components/DrawComponents/: DrawAnimatedComponent.cpp  DrawComponent.h  DrawSpriteComponent.cpp  DrawSpriteComponent.h
Source/UIElements/: UIButton.cpp  UIElement.h  UIFont.cpp  UIFont.h  UIImage.cpp  UIImage.h  UIImageButton.cpp  UIImageButton.h  UIScreen.cpp  UIScreen.h  UIText.cpp  UIText.h
